crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-sqlite[memory]_clickbench_q7.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q7"
---
+------------------------------------------------------------+------------------------------------------------------------+
| min(date_trunc(Utf8("day"),from_unixtime(hits.EventTime))) | max(date_trunc(Utf8("day"),from_unixtime(hits.EventTime))) |
+------------------------------------------------------------+------------------------------------------------------------+
| 2013-07-01T00:00:00                                        | 2013-07-31T00:00:00                                        |
+------------------------------------------------------------+------------------------------------------------------------+
