crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-turso[file]_clickbench_q21.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q21"
---
+----------+
| count(*) |
+----------+
| 1175     |
+----------+
