crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-turso[file]_clickbench_q30.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q30"
---
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| sum(hits.ResolutionWidth) | sum(hits.ResolutionWidth + Int64(1)) | sum(hits.ResolutionWidth + Int64(2)) | sum(hits.ResolutionWidth + Int64(3)) | sum(hits.ResolutionWidth + Int64(4)) | sum(hits.ResolutionWidth + Int64(5)) | sum(hits.ResolutionWidth + Int64(6)) | sum(hits.ResolutionWidth + Int64(7)) | sum(hits.ResolutionWidth + Int64(8)) | sum(hits.ResolutionWidth + Int64(9)) | sum(hits.ResolutionWidth + Int64(10)) | sum(hits.ResolutionWidth + Int64(11)) | sum(hits.ResolutionWidth + Int64(12)) | sum(hits.ResolutionWidth + Int64(13)) | sum(hits.ResolutionWidth + Int64(14)) | sum(hits.ResolutionWidth + Int64(15)) | sum(hits.ResolutionWidth + Int64(16)) | sum(hits.ResolutionWidth + Int64(17)) | sum(hits.ResolutionWidth + Int64(18)) | sum(hits.ResolutionWidth + Int64(19)) | sum(hits.ResolutionWidth + Int64(20)) | sum(hits.ResolutionWidth + Int64(21)) | sum(hits.ResolutionWidth + Int64(22)) | sum(hits.ResolutionWidth + Int64(23)) | sum(hits.ResolutionWidth + Int64(24)) | sum(hits.ResolutionWidth + Int64(25)) | sum(hits.ResolutionWidth + Int64(26)) | sum(hits.ResolutionWidth + Int64(27)) | sum(hits.ResolutionWidth + Int64(28)) | sum(hits.ResolutionWidth + Int64(29)) | sum(hits.ResolutionWidth + Int64(30)) | sum(hits.ResolutionWidth + Int64(31)) | sum(hits.ResolutionWidth + Int64(32)) | sum(hits.ResolutionWidth + Int64(33)) | sum(hits.ResolutionWidth + Int64(34)) | sum(hits.ResolutionWidth + Int64(35)) | sum(hits.ResolutionWidth + Int64(36)) | sum(hits.ResolutionWidth + Int64(37)) | sum(hits.ResolutionWidth + Int64(38)) | sum(hits.ResolutionWidth + Int64(39)) | sum(hits.ResolutionWidth + Int64(40)) | sum(hits.ResolutionWidth + Int64(41)) | sum(hits.ResolutionWidth + Int64(42)) | sum(hits.ResolutionWidth + Int64(43)) | sum(hits.ResolutionWidth + Int64(44)) | sum(hits.ResolutionWidth + Int64(45)) | sum(hits.ResolutionWidth + Int64(46)) | sum(hits.ResolutionWidth + Int64(47)) | sum(hits.ResolutionWidth + Int64(48)) | sum(hits.ResolutionWidth + Int64(49)) | sum(hits.ResolutionWidth + Int64(50)) | sum(hits.ResolutionWidth + Int64(51)) | sum(hits.ResolutionWidth + Int64(52)) | sum(hits.ResolutionWidth + Int64(53)) | sum(hits.ResolutionWidth + Int64(54)) | sum(hits.ResolutionWidth + Int64(55)) | sum(hits.ResolutionWidth + Int64(56)) | sum(hits.ResolutionWidth + Int64(57)) | sum(hits.ResolutionWidth + Int64(58)) | sum(hits.ResolutionWidth + Int64(59)) | sum(hits.ResolutionWidth + Int64(60)) | sum(hits.ResolutionWidth + Int64(61)) | sum(hits.ResolutionWidth + Int64(62)) | sum(hits.ResolutionWidth + Int64(63)) | sum(hits.ResolutionWidth + Int64(64)) | sum(hits.ResolutionWidth + Int64(65)) | sum(hits.ResolutionWidth + Int64(66)) | sum(hits.ResolutionWidth + Int64(67)) | sum(hits.ResolutionWidth + Int64(68)) | sum(hits.ResolutionWidth + Int64(69)) | sum(hits.ResolutionWidth + Int64(70)) | sum(hits.ResolutionWidth + Int64(71)) | sum(hits.ResolutionWidth + Int64(72)) | sum(hits.ResolutionWidth + Int64(73)) | sum(hits.ResolutionWidth + Int64(74)) | sum(hits.ResolutionWidth + Int64(75)) | sum(hits.ResolutionWidth + Int64(76)) | sum(hits.ResolutionWidth + Int64(77)) | sum(hits.ResolutionWidth + Int64(78)) | sum(hits.ResolutionWidth + Int64(79)) | sum(hits.ResolutionWidth + Int64(80)) | sum(hits.ResolutionWidth + Int64(81)) | sum(hits.ResolutionWidth + Int64(82)) | sum(hits.ResolutionWidth + Int64(83)) | sum(hits.ResolutionWidth + Int64(84)) | sum(hits.ResolutionWidth + Int64(85)) | sum(hits.ResolutionWidth + Int64(86)) | sum(hits.ResolutionWidth + Int64(87)) | sum(hits.ResolutionWidth + Int64(88)) | sum(hits.ResolutionWidth + Int64(89)) |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| 1161140460                | 1161867890                           | 1162595320                           | 1163322750                           | 1164050180                           | 1164777610                           | 1165505040                           | 1166232470                           | 1166959900                           | 1167687330                           | 1168414760                            | 1169142190                            | 1169869620                            | 1170597050                            | 1171324480                            | 1172051910                            | 1172779340                            | 1173506770                            | 1174234200                            | 1174961630                            | 1175689060                            | 1176416490                            | 1177143920                            | 1177871350                            | 1178598780                            | 1179326210                            | 1180053640                            | 1180781070                            | 1181508500                            | 1182235930                            | 1182963360                            | 1183690790                            | 1184418220                            | 1185145650                            | 1185873080                            | 1186600510                            | 1187327940                            | 1188055370                            | 1188782800                            | 1189510230                            | 1190237660                            | 1190965090                            | 1191692520                            | 1192419950                            | 1193147380                            | 1193874810                            | 1194602240                            | 1195329670                            | 1196057100                            | 1196784530                            | 1197511960                            | 1198239390                            | 1198966820                            | 1199694250                            | 1200421680                            | 1201149110                            | 1201876540                            | 1202603970                            | 1203331400                            | 1204058830                            | 1204786260                            | 1205513690                            | 1206241120                            | 1206968550                            | 1207695980                            | 1208423410                            | 1209150840                            | 1209878270                            | 1210605700                            | 1211333130                            | 1212060560                            | 1212787990                            | 1213515420                            | 1214242850                            | 1214970280                            | 1215697710                            | 1216425140                            | 1217152570                            | 1217880000                            | 1218607430                            | 1219334860                            | 1220062290                            | 1220789720                            | 1221517150                            | 1222244580                            | 1222972010                            | 1223699440                            | 1224426870                            | 1225154300                            | 1225881730                            |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
