crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__scylladb-cayenne[file]_tpch_q22.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q22"
---
+--------------------+---------+------------+
| custsale.cntrycode | numcust | totacctbal |
+--------------------+---------+------------+
| 13                 | 888     | 6737713.99 |
| 17                 | 861     | 6460573.72 |
| 18                 | 964     | 7236687.40 |
| 23                 | 892     | 6701457.95 |
| 29                 | 948     | 7158866.63 |
| 30                 | 909     | 6808436.13 |
| 31                 | 922     | 6806670.18 |
+--------------------+---------+------------+
