crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__scylladb-federated_tpch_q1.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q1"
---
+--------------+--------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
| l_returnflag | l_linestatus | sum_qty    | sum_base_price     | sum_disc_price     | sum_charge         | avg_qty            | avg_price          | avg_disc             | count_order |
+--------------+--------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
| A            | F            | 37733617.0 | 56585969564.950195 | 53757688896.89536  | 55908478133.44306  | 25.52200241600461  | 38273.22601882089  | 0.04998549856138065  | 1478474     |
| N            | F            | 991370.0   | 1487427410.42      | 1413004868.0940998 | 1469568831.2359746 | 25.5159189766556   | 38283.46357861684  | 0.050094715980747925 | 38853       |
| N            | O            | 74475569.0 | 111700937847.95006 | 106117457050.20027 | 110366256643.43225 | 25.502275069769034 | 38249.161178608745 | 0.04999676751080573  | 2920350     |
| R            | F            | 37719758.0 | 56568047520.52009  | 53741292921.39646  | 55889623757.71616  | 25.505831487326795 | 38250.91050757748  | 0.05000949374794692  | 1478868     |
+--------------+--------------+------------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
