crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__scylladb-federated_tpch_q10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
assertion_line: 742
description: "Query: tpch_q10"
---
+-----------+--------------------+--------------------+-----------+-----------+------------------------------------------+-----------------+----------------------------------------------------------------------------------------------------------------------+
| c_custkey | c_name             | revenue            | c_acctbal | n_name    | c_address                                | c_phone         | c_comment                                                                                                            |
+-----------+--------------------+--------------------+-----------+-----------+------------------------------------------+-----------------+----------------------------------------------------------------------------------------------------------------------+
| 679       | Customer#000000679 | 378211.32519999996 | 1394.44   | IRAN      | IJf1FlZL9I9m,rvofcoKy5pRUOjUQV           | 20-146-696-9508 | ely pending frays boost carefully                                                                                    |
| 1201      | Customer#000001201 | 374331.53400000004 | 5165.39   | IRAN      | LfCSVKWozyWOGDW02g9UX,XgH5YU2o5ql1zBrN   | 20-825-400-1187 | lyly pending packages. special requests sleep-- platelets use blithely after the instructions. sometimes even id     |
| 422       | Customer#000000422 | 366451.0126        | -272.14   | INDONESIA | AyNzZBvmIDo42JtjP9xzaK3pnvkh Qc0o08ssnvq | 19-299-247-2444 | eposits; furiously ironic packages accordi                                                                           |
| 334       | Customer#000000334 | 360370.755         | -405.91   | EGYPT     | OPN1N7t4aQ23TnCpc                        | 14-947-291-5002 | fully busily special ideas. carefully final excuses lose slyly carefully express accounts. even, ironic platelets ar |
| 805       | Customer#000000805 | 359448.90359999996 | 511.69    | IRAN      | wCKx5zcHvwpSffyc9qfi9dvqcm9LT,cLAG       | 20-732-989-5653 | busy sentiments. pending packages haggle among the express requests-- slyly regular excuses above the slyl           |
| 932       | Customer#000000932 | 341608.2753        | 6553.37   | JORDAN    | HN9Ap0NsJG7Mb8O                          | 23-300-708-7927 | packages boost slyly along the furiously express foxes. ev                                                           |
| 853       | Customer#000000853 | 341236.6246        | -444.73   | BRAZIL    | U0 9PrwAgWK8AE0GHmnCGtH9BTexWWv87k       | 12-869-161-3468 | yly special deposits wake alongside of                                                                               |
| 872       | Customer#000000872 | 338328.78080000007 | -858.61   | PERU      | vLP7iNZBK4B,HANFTKabVI3AO Y9O8H          | 27-357-139-7164 |  detect. packages wake slyly express foxes. even deposits ru                                                         |
| 737       | Customer#000000737 | 338185.3365        | 2501.74   | CHINA     | NdjG1k243iCLSoy1lYqMIrpvuH1Uf75          | 28-658-938-1102 | ding to the final platelets. regular packages against the carefully final ideas hag                                  |
| 1118      | Customer#000001118 | 319875.728         | 4130.18   | IRAQ      | QHg,DNvEVXaYoCdrywazjAJ                  | 21-583-715-8627 | y regular requests above the blithely ironic accounts use slyly bold packages: regular pinto beans eat carefully spe |
+-----------+--------------------+--------------------+-----------+-----------+------------------------------------------+-----------------+----------------------------------------------------------------------------------------------------------------------+
