crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__scylladb-federated_tpch_q11.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q11"
---
+------------+-------------------+
| ps_partkey | value             |
+------------+-------------------+
| 1376       | 13271249.89       |
| 788        | 9498648.06        |
| 1071       | 9388264.4         |
| 1768       | 9207199.75        |
| 1168       | 8881908.959999999 |
| 1084       | 8709494.16        |
| 1415       | 8471489.56        |
| 1338       | 8293841.12        |
| 124        | 8203209.3         |
| 1232       | 8111663.34        |
+------------+-------------------+
