crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__scylladb-federated_tpch_q12.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q12"
---
+------------+-----------------+----------------+
| l_shipmode | high_line_count | low_line_count |
+------------+-----------------+----------------+
| MAIL       | 64              | 86             |
| SHIP       | 61              | 96             |
+------------+-----------------+----------------+
